--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test-fil</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body>
    <h1>Dette er din test-fil, her skal du lave dit arbejde</h1>
