--- a/test.html
+++ b/test.html
@@ -8,5 +8,10 @@
 <body>
    <h1>Dette er din test-fil, her skal du lave dit arbejde</h1>
     <h2>Nu er der kommet en linje mere på!</h2>
+    <ul>
+        <li>Bøvl</li>
+        <li>Besvær</li>
+        <li>og tænders gnidsel</li>
+    </ul>
 </body>
 </html>
