--- a/test.html
+++ b/test.html
@@ -13,5 +13,10 @@
         <li>Besvær</li>
         <li>og tænders gnidsel</li>
     </ul>
+
+
+    <footer>
+        Mere fra originalen &copy; 2018
+    </footer>
 </body>
 </html>
